# semantic-3-way-merger

./: .gitignore  .gitmodules  README.md  eqRunner.py  getEdits.py  mergeChecker.py  pyproject.toml  runtime.py  semanticMerger.py
benchmarks/klee/buggy/divide_by_zero/: A.c  B.c  M.c  O.c  prompt.txt  repair.c
benchmarks/klee/buggy/double_free/: A.c  B.c  M.c  O.c  prompt.txt  repair.c
benchmarks/klee/buggy/nullpointer_dereference/: A.c  B.c  M.c  O.c  prompt.txt  repair.c
benchmarks/klee/buggy/out_of_bound_access/: A.c  B.c  M.c  O.c  prompt.txt  repair.c
benchmarks/klee/safe/1/: B.c  M.c  O.c
benchmarks/klee/safe/2/: A.c  B.c  M.c  O.c  synthesis.c
benchmarks/klee/safe/3/: A.c  M.c  O.c
benchmarks/klee/unsafe/1/: A.c  B.c  M.c  O.c  merge.c
benchmarks/klee/unsafe/3/: M.c
benchmarks/klee/unsafe/4/: A.c  B.c  M.c  O.c  merge.c
checker/: equivalenceChecker.py
scripts/: smoke_test.py
tests/: test_get_edits.py  test_runtime.py
